passage de l'url dans le fichier url.js

--- a/produit/choix.html
+++ b/produit/choix.html
@@ -58,6 +58,7 @@
         </div>
     </footer>
 </body>
-<script src="js/choix.js"></script>
+<script src="js/url.js"></script>
+<script  src="js/choix.js"></script>
 
 </html>
