--- a/produit/confirmation.html
+++ b/produit/confirmation.html
@@ -55,6 +55,7 @@
         <p class="gauche">copyright tout droit réservé 2020-2021</p>
     </div>
 </footer>
+<script src="js/url.js"></script>
 <script src="js/commande.js"></script>
 </body>
 
