--- a/produit/produit.html
+++ b/produit/produit.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Orinoco - la selection de nos produits">
     <link rel="stylesheet" href="css/produit.css">
+   
     <title>orinoco produits</title>
 </head>
 
@@ -45,7 +46,9 @@
             <p class="gauche">copyright tout droit réservé 2020-2021</p>
         </div>
     </footer>
+    <script src="js/url.js"></script>
     <script src="js/produits.js"></script>
+   
     <script src="https://kit.fontawesome.com/acf7d21dfe.js" crossorigin="anonymous"></script>
 </body>
 
