--- a/produit/panier.html
+++ b/produit/panier.html
@@ -90,6 +90,7 @@
             <p class="gauche">copyright tout droit réservé 2020-2021</p>
         </div>
     </footer>
+    <script src="js/url.js"></script>
     <script src="js/panier.js"></script>
 </body>
 
